--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My friends are fkn idiot</title>
+    <title>
+      {{title}}
+    </title>
   </head>
   <body>
-    <h1>Hello there</h1>
-    <img src="./images/img.jpg" alt="a dummy friend" />
+
+    <h1>{{caption}}</h1>
+    <img src="site/images/img.jpg" alt="a dummy friend" />
   </body>
 </html>
